fix: overflow x in small screens

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,8 @@ body {
   transition:
     background-color var(--transition-base),
     color var(--transition-base);
+
+    overflow-x: hidden;
 }
 
 img {
